# DLAI_deep_DYN

./: .gitignore  README.md  companding_ablation.py  librispeech_dev_clean_companding_metrics.csv  pyproject.toml  run_all_experiments.bat  run_all_experiments.sh  test_metrics.csv
src/: loss.py  tester.py  train_baseline.py  train_baseline_16bit.py  train_baseline_8bit_mu_law.py  train_dyn.py
src/datasets/: __init__.py  librispeech.py
src/dyn_encoder/: __init__.py  dyn_encoder.py
src/models/: __init__.py  all_shared_3.py  baseline_16bit_6_7.py  dual_encoder_waveform_only_4.py  dual_waveform_1.py  helpers.py  model_config.py  shared_encoder_2.py  shared_encoder_waveform_only_5.py
src/utils/: early_stopping.py  misc.py
